tests/fixtures/errors/spec_field_ctor_required.z
# E0300: a bodyless-spec fn-pointer field requires its constructor argument.
Proc: class {
    op: function {v: u64} out u64
} as {
    run: function {:this v: u64} out u64 is {
        return (this.op v: v)
    }
}

main: function is {
    p: Proc.create
    print "\{p.run v: 1}"
}
